--- a/src/app/create-post/create-post.component.html
+++ b/src/app/create-post/create-post.component.html
@@ -1,5 +1,13 @@
-  <!-- create post -->
+<div class="container-fluid">
+  <div class="row justify-content-evenly">
+<div class="col-12 col-lg-6 pb-5">
+  <div
+    class="d-flex flex-column justify-content-center w-100 mx-auto"
+    style="padding-top: 56px; max-width: 680px"
+  > <!-- create post -->
+<form (ngSubmit)="onSubmit()" #postForm="ngForm">
   <div class="bg-white p-3 mt-3 rounded border shadow">
+    <p>Create Post</p>
     <!-- avatar -->
     <div class="d-flex" type="button">
       <div class="p-1">
@@ -10,6 +18,7 @@
           style="width: 38px; height: 38px; object-fit: cover"
         />
       </div>
+      
       <input
         type="text"
         class="form-control rounded-pill border-0 bg-gray pointer"
@@ -19,14 +28,22 @@
         data-bs-target="#createModal"
       />
     </div>
-    <div class="modal-dialog modal-dialog-centered">
+    <!-- create modal -->
+    <div
+      class="modal fade"
+      id="createModal"
+      tabindex="-1"
+      aria-labelledby="createModalLabel"
+      aria-hidden="true"
+      data-bs-backdrop="false"
+      #createModal
+    >
+      <div class="modal-dialog modal-dialog-centered">
         <div class="modal-content">
           <!-- head -->
+          <!-- head -->
           <div class="modal-header align-items-center">
-            <h5
-              class="text-dark text-center w-100 m-0"
-              id="exampleModalLabel"
-            >
+            <h5 class="text-dark text-center w-100 m-0" id="exampleModalLabel">
               Create Post
             </h5>
             <button
@@ -47,27 +64,30 @@
                       src="https://source.unsplash.com/collection/happy-people"
                       alt="from fb"
                       class="rounded-circle"
-                      style="
-                        width: 38px;
-                        height: 38px;
-                        object-fit: cover;
-                      "
+                      style="width: 38px; height: 38px; object-fit: cover"
                     />
                   </div>
                   <div>
-                    <p class="m-0 fw-bold"> {{ userName() }}</p>
+                    <p class="m-0 fw-bold">{{ userName() }}</p>
                   </div>
                 </div>
                 <!-- text -->
-                
-                <div>
-               
+              
+                  <div [hidden]="!content.pristine" class="alert alert-danger">
+                    Content is required
+                  </div>
                   <textarea
+                    [(ngModel)]="post.content"
+                    id="content"
+                    name="content"
+                    placeholder="Write a post"
+                    required
+                    #content="ngModel"
                     cols="30"
                     rows="5"
                     class="form-control border-0"
                   ></textarea>
-                </div>
+                
                 
                 <!-- options -->
                 <div
@@ -75,25 +95,31 @@
                 >
                   <p class="m-0">Add to your post</p>
                   <div>
-                    <i
-                      class="fas fa-images fs-5 text-success pointer mx-1"
-                    ></i>
+                    <i class="fas fa-images fs-5 text-success pointer mx-1"></i>
                   </div>
                 </div>
-            
               </div>
-              
             </div>
 
             <!-- end -->
           </div>
           <!-- footer -->
           <div class="modal-footer">
-            <button type="button" class="btn btn-primary w-100">
+            <button
+              type="submit"
+              [disabled]="!postForm.form.valid"
+              class="btn btn-primary w-100"
+              data-bs-dismiss="modal"
+            >
               Post
             </button>
           </div>
         </div>
       </div>
     </div>
-    <hr />
+  </div>
+</form>
+</div>
+</div>
+</div>
+</div>
