--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -5,10 +5,63 @@
       alt="Logo"
       [style.width.px]="60"
       [style.height.px]="60"
-    />
+    />  
+      <!-- search bar -->
+      <div class="input-group ms-2" type="button" *ngIf="hasSignedIn()">
+        <!-- desktop -->
+        <span
+          class="input-group-prepend d-none d-lg-block"
+          id="searchMenu"
+          data-bs-toggle="dropdown"
+          aria-expanded="false"
+          data-bs-auto-close="outside"
+        >
+    <div class="input-group-text bg-gray border-0 rounded-pill" style="min-height: 40px; min-width: 230px">
+      <i class="fas fa-search me-2 text-muted"></i>
+      <p class="m-0 fs-7 text-muted">Search</p>
+    </div>
+  </span>
+     <!-- search menu -->
+     <ul
+     class="dropdown-menu overflow-auto border-0 shadow p-3"
+     aria-labelledby="searchMenu"
+     style="width: 20em; max-height: 600px"
+   >
+     <!-- search input -->
+     <li>
+       <input
+         type="text"
+         class="rounded-pill border-0 bg-gray dropdown-item"
+         placeholder="Search"
+         autofocus
+       />
+     </li>
+     </ul>
+ 
+    <!-- home -->
+    <div class="mx-4 nav__btn nav__btn-active">
+      <button type="button" class="btn px-4">
+        <i class="fas fa-home text-muted fs-4"></i>
+      </button>
+    </div>
+
+      <!-- group -->
+      <div class="mx-4 nav__btn nav__btn-active">
+        <button type="button" class="btn px-4">
+          <i class="fas fa-users text-muted fs-4"></i>
+        </button>
+    </div>
   </div>
-  <div class="right">
+  </div>
+ 
+  <div class="right"  *ngIf="hasSignedIn()">
     <div fxFlex="1 1 auto" fxLayout="row" fxLayoutAlign="flex-end center">
+      <img
+      src="https://source.unsplash.com/collection/happy-people"
+      class="rounded-circle me-2"
+      alt="avatar"
+      style="width: 38px; height: 38px; object-fit: cover"
+    />
       <button
         *ngIf="hasSignedIn()"
         [matMenuTriggerFor]="userMenu"
@@ -16,7 +69,7 @@
         mat-button
         mat-ripple
       >
-        <span>Hello, {{ userName() }}</span>
+        <span>{{ userName() }}</span>
       </button>
       <button
         *ngIf="hasSignedIn()"
@@ -35,7 +88,6 @@
         class="app-header-userMenu"
         yposition="below"
       >
-      
         <app-user-menu></app-user-menu>
       </mat-menu>
       
