--- a/src/app/post/post.component.html
+++ b/src/app/post/post.component.html
@@ -1,4 +1,10 @@
-  <!-- posts -->
+<div class="container-fluid">
+  <div class="row justify-content-evenly">
+<div class="col-12 col-lg-6 pb-5">
+  <div
+    class="d-flex flex-column justify-content-center w-100 mx-auto"
+    style="padding-top: 56px; max-width: 680px"
+  > <!-- posts -->
             <!-- p 1 -->
             <!-- <div class="bg-white p-4 rounded shadow mt-3">
               <!-- author -->
@@ -13,7 +19,7 @@
                     style="width: 38px; height: 38px; object-fit: cover"
                   />
                   <div>
-                    <p class="m-0 fw-bold"> {{ userName() }}</p>
+                    <p class="m-0 fw-bold">{{ post.user.username }}</p>
                     <span class="text-muted fs-7">{{ post.creationDate }}</span>
                   </div>
                 </div>
@@ -33,7 +39,8 @@
                   <li class="d-flex align-items-center">
                     <a
                       class="dropdown-item d-flex justify-content-around align-items-center fs-7"
-                      href="#"
+                       style="cursor: pointer"
+                       *ngIf="post.user.username == userName()"
                     >
                       Edit Post</a
                     >
@@ -41,7 +48,8 @@
                   <li class="d-flex align-items-center">
                     <a
                       class="dropdown-item d-flex justify-content-around align-items-center fs-7"
-                      href="#"
+                      *ngIf="post.user.username == userName()"
+                     (click)="deletePost(post)"  style="cursor: pointer"
                     >
                       Delete Post</a
                     >
@@ -236,4 +244,9 @@
                 </div>
               </div>
             </div>
-            
+            </div>
+            </div>
+            <div class="container-fluid">
+              <div class="row justify-content-evenly">
+          
+           
