--- a/src/app/groups/groups.component.html
+++ b/src/app/groups/groups.component.html
@@ -59,7 +59,7 @@
             </h4>
             <p>{{ group.description }}</p>
             <p>Creation date: {{ group.creationDate }}</p>
-            <p>Created by: {{ group.groupAdmin }}</p>
+            <!-- <p>Created by: {{ group.groupAdmin.user.username }}</p>  -->
           </div>
 
           <button class="btn btn-warning d-block w-100" fdprocessedid="0jc7jk">
