--- a/src/app/post/post.component.html
+++ b/src/app/post/post.component.html
@@ -18,7 +18,7 @@
   </div>
             <!-- <div class="bg-white p-4 rounded shadow mt-3">
               <!-- author -->
-            <div *ngFor="let post of posts">
+            <div *ngFor="let post of posts"  >
               
               <div class="d-flex justify-content-between">
                 <!-- avatar -->
@@ -51,9 +51,9 @@
                     <a
                       class="dropdown-item d-flex justify-content-around align-items-center fs-7"
                        style="cursor: pointer"  data-bs-toggle="modal"
-                       data-bs-target="#groupModal"
+                       data-bs-target="#createModal"
                        *ngIf="post.user.username == userName()"
-                       (click)="editPost(post)" 
+                       (click)="onSelectedPost(post)" 
                     >
                       Edit Post</a
                     >
@@ -82,22 +82,12 @@
                 </div>
                 <!-- likes & comments -->
                 <div class="post__comment mt-3 position-relative">
-                  <!-- likes -->
-                  <div
-                    class="d-flex align-items-center top-0 start-0 position-absolute"
-                    style="height: 50px; z-index: 5"
-                  >
-                    <div class="me-2">
-                      <i class="text-primary fas fa-thumbs-up"></i>
-                      <i class="text-danger fab fa-gratipay"></i>
-                      <i class="text-warning fas fa-grin-squint"></i>
-                    </div>
-                    </div>
+                
                   <!-- comments start-->
                   <div class="accordion" id="accordionExample">
                     <div class="accordion-item border-0">
                       <!-- comment collapse -->
-                      <h2 class="accordion-header" id="headingTwo">
+                 <h2 class="accordion-header" id="headingTwo">
                         <div
                           class="accordion-button collapsed pointer d-flex justify-content-end"
                           data-bs-toggle="collapse"
@@ -108,154 +98,13 @@
                          </div>
                       </h2>
                       <hr />
-                      <!-- comment & like bar -->
-                      <div class="d-flex justify-content-around">
-                        <div
-                          class="dropdown-item rounded d-flex justify-content-center align-items-center pointer text-muted p-1"
-                        >
-                          <i class="fas fa-thumbs-up me-3"></i>
-                          <p class="m-0">Like</p>
-                        </div>
-                            <div
-                              class="dropdown-item rounded d-flex justify-content-center align-items-center pointer text-muted p-1"
-                            >
-                              <i class="fas fa-thumbs-down me-3"></i>
-                              <p class="m-0">Dislike</p>
-                              </div>
-                                <div
-                                  class="dropdown-item rounded d-flex justify-content-center align-items-center pointer text-muted p-1"
-                                >
-                                <i class="fa-solid fa-heart "></i>
-                                  <p class="m-0">Heart</p>
+                      <app-reaction [post]="post" ></app-reaction>
+                       <app-comment ></app-comment>
                       </div>
-                                <div
-                          class="dropdown-item rounded d-flex justify-content-center align-items-center pointer text-muted p-1"
-                          data-bs-toggle="collapse"
-                          data-bs-target="#collapsePost1"
-                          aria-expanded="false"
-                          aria-controls="collapsePost1"
-                        >
-                          <i class="fas fa-comment-alt me-3"></i>
-                          <p class="m-0">Comment</p>
-                        </div>
-                      </div>
-                      <!-- comment expand -->
-                      <div
-                        id="collapsePost1"
-                        class="accordion-collapse collapse"
-                        aria-labelledby="headingTwo"
-                        data-bs-parent="#accordionExample"
-                      >
-                        <hr />
-                        <div class="accordion-body">
-                          <!-- comment 1 -->
-                          <div class="d-flex align-items-center my-1">
-                            <!-- avatar -->
-                            <img
-                              src="https://source.unsplash.com/collection/happy-people"
-                              alt="avatar"
-                              class="rounded-circle me-2"
-                              style="
-                                width: 38px;
-                                height: 38px;
-                                object-fit: cover;
-                              "
-                            />
-                            <!-- comment text -->
-                            <div class="p-3 rounded comment__input w-100">
-                              <!-- comment menu of author -->
-                              <div class="d-flex justify-content-end">
-                                <!-- icon -->
-                                <i
-                                  class="fas fa-ellipsis-h text-blue pointer"
-                                  id="post1CommentMenuButton"
-                                  data-bs-toggle="dropdown"
-                                  aria-expanded="false"
-                                ></i>
-                                <!-- menu -->
-                                <ul
-                                  class="dropdown-menu border-0 shadow"
-                                  aria-labelledby="post1CommentMenuButton"
-                                >
-                                  <li class="d-flex align-items-center">
-                                    <a
-                                      class="dropdown-item d-flex justify-content-around align-items-center fs-7"
-                                    >
-                                      Edit Comment</a
-                                    >
-                                  </li>
-                                  <li class="d-flex align-items-center">
-                                    <a
-                                      class="dropdown-item d-flex justify-content-around align-items-center fs-7"
-                                      href="#"
-                                    >
-                                      Delete Comment</a
-                                    >
-                                  </li>
-                                </ul>
-                              </div>
-                              <p class="fw-bold m-0"> {{ userName() }}</p>
-                              <p class="m-0 fs-7 bg-gray p-2 rounded">
-                                Lorem ipsum dolor sit amet, consectetur
-                                adipiscing elit.
-                              </p>
-                            </div>
-                          </div>
-                          <!-- comment 2 -->
-                          <div class="d-flex align-items-center my-1">
-                            <!-- avatar -->
-                            <img
-                              src="https://source.unsplash.com/random/2"
-                              alt="avatar"
-                              class="rounded-circle me-2"
-                              style="
-                                width: 38px;
-                                height: 38px;
-                                object-fit: cover;
-                              "
-                            />
-                            <!-- comment text -->
-                            <div class="p-3 rounded comment__input w-100">
-                              <p class="fw-bold m-0">Jerry</p>
-                              <p class="m-0 fs-7 bg-gray p-2 rounded">
-                                Lorem ipsum dolor sit amet, consectetur
-                                adipiscing elit.
-                              </p>
-                            </div>
-                          </div>
-                          <!-- create comment -->
-                          <form class="d-flex my-1">
-                            <!-- avatar -->
-                            <div>
-                              <img
-                                src="https://source.unsplash.com/collection/happy-people"
-                                alt="avatar"
-                                class="rounded-circle me-2"
-                                style="
-                                  width: 38px;
-                                  height: 38px;
-                                  object-fit: cover;
-                                "
-                              />
-                            </div>
-                            <!-- input -->
-                            <input
-                              type="text"
-                              class="form-control border-0 rounded-pill bg-gray"
-                              placeholder="Write a comment"
-                            />
-                          </form>
-                          <!-- end -->
-                        </div>
-                      </div>
-                    </div>
-                  </div>
-                  <!-- end -->
-                </div>
               </div>
             </div>
             </div>
             </div>
-                
+             </div>   
           
            
