--- a/src/app/post/post.component.html
+++ b/src/app/post/post.component.html
@@ -99,7 +99,7 @@
                       </h2>
                       <hr />
                       <app-reaction [post]="post" ></app-reaction>
-                       <app-comment ></app-comment>
+                       <app-comment [post]="post" ></app-comment>
                       </div>
               </div>
             </div>
