--- a/src/app/post/post.component.html
+++ b/src/app/post/post.component.html
@@ -11,11 +11,11 @@
     style="padding-top: 56px; max-width: 680px"
   > <!-- posts -->
   <div _ngcontent-sji-c1="" class="pt-1 mb-3">
-    <button _ngcontent-sji-c1="" type="submit" class="btn btn-warning btn-lg btn-block" 
-   > Sort ascending </button>
-    <button _ngcontent-sji-c1="" type="submit" class="btn btn-warning btn-lg btn-block" 
-   > Sort descending</button>
-  </div>
+    <button type="button" (click)="toggleSortingOrder()" class="btn btn-warning btn-block">
+    <i class="fa-solid fa-calendar-days"></i> {{ sortingOrder === 'ascending' ? 'descending' : 'ascending' }}
+    </button>  </div>
+
+
             <!-- <div class="bg-white p-4 rounded shadow mt-3">
               <!-- author -->
             <div *ngFor="let post of posts"  >
@@ -52,7 +52,7 @@
                       class="dropdown-item d-flex justify-content-around align-items-center fs-7"
                        style="cursor: pointer"  data-bs-toggle="modal"
                        data-bs-target="#createModal"
-                       *ngIf="post.user.username == userName()"
+                       *ngIf="post.user.username == userName() || userType() === 'ADMIN'"
                        (click)="onSelectedPost(post)" 
                     >
                       Edit Post</a
@@ -61,7 +61,7 @@
                   <li class="d-flex align-items-center">
                     <a
                       class="dropdown-item d-flex justify-content-around align-items-center fs-7"
-                      *ngIf="post.user.username == userName()"
+                      *ngIf="post.user.username == userName() || userType() === 'ADMIN'"
                      (click)="deletePost(post)"  style="cursor: pointer"
                     >
                       Delete Post</a
@@ -105,6 +105,7 @@
             </div>
             </div>
             </div>
-             </div>   
+             </div>
+             <hr />   
           
            
