--- a/src/styles.css
+++ b/src/styles.css
@@ -69,13 +69,7 @@ body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
     border: 0 !important;
     box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
   }
-  /* stories */
-  .story:hover {
-    opacity: 0.8;
-  }
-  .pointer {
-    cursor: pointer;
-  }
+ 
   /* comment */
   .post__comment .accordion-button::after {
     margin-left: 0 !important;
@@ -98,3 +92,7 @@ body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
       width: 100%;
     }
   }
+  .custom-margin {
+    margin-right: 10px; 
+  }
+  
