--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -40,17 +40,24 @@
  
     <!-- home -->
     <div class="mx-4 nav__btn nav__btn-active">
-      <button type="button" class="btn px-4" routerLink="/home">
+      <button type="button" class="btn px-4" routerLink="/home" title="Home">
         <i class="fas fa-home text-muted fs-4"></i>
       </button>
     </div>
 
       <!-- group -->
       <div class="mx-4 nav__btn nav__btn-active">
-        <button type="button" class="btn px-4" routerLink="/groups">
+        <button type="button" class="btn px-4" routerLink="/groups" title="Groups">
           <i class="fas fa-users text-muted fs-4" ></i>
         </button>
     </div>
+
+     <!-- friend request -->
+     <div class="mx-4 nav__btn nav__btn-active">
+      <button type="button" class="btn px-4" routerLink="/requests" title="Requests">
+        <i class= "fa-solid fa-envelope text-muted fs-4" ></i>
+      </button>
+  </div>
   </div>
   </div>
  
