--- a/src/app/components/friend-request/friend-request.component.html
+++ b/src/app/components/friend-request/friend-request.component.html
@@ -1,4 +1,14 @@
-<div class="card">
+<div class="header-for-bg position-relative">
+  <div class="background-header">
+    <img
+      src="assets/images/smiley4rotate.jpg"
+      class="img-fluid"
+      style="width: 1350px; height: 150px;"
+      alt="header-bg"
+      loading="lazy"
+    />
+  </div>
+ <div class="card">
   <div class="card-header d-flex justify-content-between">
     <div class="header-title">
       <h4 class="card-title">Friend Request</h4>
@@ -10,8 +20,7 @@
         <div class="user-img img-fluid flex-shrink-0">
           <div class="p-1">
             <img
-              src="https://source.unsplash.com/collection/happy-people"
-              alt="avatar"
+            src="assets/images/smiley6.jpg"
               class="rounded-circle me-2"
               style="width: 38px; height: 38px; object-fit: cover"
             />
@@ -22,55 +31,15 @@
         </div>
         <div class="d-flex align-items-center mt-2 mt-md-0">
           <div class="confirm-click-btn">
-            <a href="#" class="me-3 btn btn-primary rounded confirm-btn"
+            <a class="me-3 btn btn-warning rounded confirm-btn"
               >Confirm</a
-            >
-            <a
-              href="../app/profile.html"
-              class="me-3 btn btn-primary rounded request-btn"
-              style="display: none"
-              >View All</a
             >
           </div>
           <a
-            href="#"
             class="btn btn-secondary rounded"
             data-extra-toggle="delete"
             data-closest-elem=".item"
             >Delete Request</a
-          >
-        </div>
-      </li>
-    </ul>
-  </div>
-</div>
-<div class="card">
-  <div class="card-header d-flex justify-content-between">
-    <div class="header-title">
-      <h4 class="card-title">People You May Know</h4>
-    </div>
-  </div>
-  <div class="card-body">
-    <ul class="request-list m-0 p-0">
-      <li class="d-flex align-items-center flex-wrap">
-        <div class="user-img img-fluid flex-shrink-0">
-            <div class="p-1">
-                <img
-                  src="https://source.unsplash.com/collection/happy-people"
-                  alt="avatar"
-                  class="rounded-circle me-2"
-                  style="width: 38px; height: 38px; object-fit: cover"
-                />
-              </div>
-        </div>
-        <div class="flex-grow-1 ms-3">
-          <h6>Tina</h6>
-        </div>
-        <div class="d-flex align-items-center mt-2 mt-md-0">
-          <a
-            href="#"
-            class="me-3 btn btn-primary rounde d-flex align-items-center"
-            >Add Friend</a
           >
         </div>
       </li>
