--- a/src/app/components/friend-request/friend-request.component.html
+++ b/src/app/components/friend-request/friend-request.component.html
@@ -28,7 +28,7 @@
           </div>
         </div>
         <div class="flex-grow-1 ms-3">
-          <p class="m-0 fw-bold">{{ friendRequest.fromUser.firstName}} {{ friendRequest.fromUser.lastName}}</p>
+          <p class="m-0 fw-bold"  style="cursor: pointer;" [routerLink]="['/profile',friendRequest.fromUser.id]">{{ friendRequest.fromUser.firstName}} {{ friendRequest.fromUser.lastName}}</p>
           <span class="text-muted fs-7">{{ formatDate(friendRequest.created_at) }}</span>
         </div>
         <div class="d-flex align-items-center mt-2 mt-md-0">
