--- a/src/app/components/group-request/group-request.component.html
+++ b/src/app/components/group-request/group-request.component.html
@@ -28,7 +28,7 @@
             </div>
           </div>
           <div class="flex-grow-1 ms-3">
-            <p class="m-0 fw-bold">{{ groupRequest.user.profileName ? groupRequest.user.profileName : groupRequest.user.username }}</p>
+            <p class="m-0 fw-bold" style="cursor: pointer;" [routerLink]="['/profile',groupRequest.user.id]">{{ groupRequest.user.profileName ? groupRequest.user.profileName : groupRequest.user.username }}</p>
             <span class="text-muted fs-7">{{ formatDate(groupRequest.created_at) }}</span>
            </div> 
           <div class="d-flex align-items-center mt-2 mt-md-0">
