--- a/src/app/components/groups/groups.component.html
+++ b/src/app/components/groups/groups.component.html
@@ -63,7 +63,7 @@
                     style="cursor: pointer"
                     data-bs-toggle="modal"
                     data-bs-target="#groupModal"
-                    *ngIf="group.groupAdmin.user.username == userName() || userType() === 'ADMIN'"
+                    *ngIf="group.groupAdmin[0].user.username == userName() || userType() === 'ADMIN'"
                     (click)="editGroup(group)"
                   >
                     Edit Group</a
@@ -74,11 +74,12 @@
                     class="dropdown-item d-flex justify-content-around align-items-center fs-7"
                     style="cursor: pointer"
                     *ngIf="userType() === 'ADMIN'"
-                    (click)="deleteGroup(group)"
+                    (click)="openSuspendModal(group)"
                   >
-                    Delete Group</a
+                    Suspend Group</a
                   >
                 </li>
+                
               </ul>
               <div class="top-bg-image">
                 <img
@@ -92,17 +93,18 @@
               <!-- group info -->
               <div class="group-info pt-3 pb-3">
                 <h4>
-                  <a [routerLink]="['/group', group.id]">{{ group.name }}</a>
+                  <a  style="cursor: pointer;" [routerLink]="['/group', group.id]">{{ group.name }}</a>
                 </h4>
                 <p>{{ group.description }}</p>
                 <p>Creation date: {{ formatDate(group.creationDate) }}</p>
-                <p>Created by: {{ group.groupAdmin.user.username }}</p>
+                <p  *ngFor="let admin of group.groupAdmin"
+                 style="cursor: pointer;" [routerLink]="['/profile', admin.user.id]">Group admin : {{ admin.user.username }}</p> 
               </div>
 
               <button
                 class="btn btn-warning d-block w-800"
                 fdprocessedid="0jc7jk"  
-                *ngIf="group.groupAdmin.user.username != userName()"
+                *ngIf="group.groupAdmin[0]?.user?.username != userName()"
                 (click)="createGroupRequest(group)"
               >
                 Join group
