--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -57,7 +57,7 @@
             </div>
           </div>
           <div class="flex-grow-1 ms-3">
-            <h6>{{result.firstName}} {{result.lastName}}</h6>
+            <h6  style="cursor: pointer;" [routerLink]="['/profile', result.id]">{{result.firstName}} {{result.lastName}}</h6>
           </div>
           <div class="d-flex align-items-center mt-2 mt-md-0">
             <div class="confirm-click-btn">
