--- a/src/app/components/post/post.component.html
+++ b/src/app/components/post/post.component.html
@@ -14,6 +14,7 @@
 
               <!-- author -->
             <div *ngFor="let post of posts"  >
+              <div *ngIf="post.user.username === userName() || shouldDisplayPost(post) ">
               <hr />  
               <div class="d-flex justify-content-between">
                 <!-- avatar -->
@@ -24,7 +25,8 @@
                     style="width: 38px; height: 38px; object-fit: cover"
                   />
                   <div>
-                    <p class="m-0 fw-bold">{{ post.user.profileName ? post.user.profileName : post.user.username }}</p>
+                    <p  style="cursor: pointer;" [routerLink]="['/profile', post.user.id]" class="m-0 fw-bold">{{ post.user.profileName ? post.user.profileName : post.user.username }}</p>
+                    <p *ngIf="post.group" style="cursor: pointer;" [routerLink]="['/group', post.group.id]">group: {{ post.group.name}}</p>
                     <span class="text-muted fs-7">{{ formatDate(post.creationDate) }}</span>
                   </div>
                 </div>
@@ -70,15 +72,7 @@
                       Report Post
                     </a>
                   </li>
-                  <li class="d-flex align-items-center">
-                    <a
-                      class="dropdown-item d-flex justify-content-around align-items-center fs-7"
-                      style="cursor: pointer"
-                      (click)="openUserReportModal(post.user)"
-                    >
-                      Report User
-                    </a>
-                  </li>
+                  
                 </ul>
               </div>
               <!-- post content -->
