--- a/src/app/components/group-post/group-post.component.html
+++ b/src/app/components/group-post/group-post.component.html
@@ -116,7 +116,7 @@
                         </h2>
                         <hr />
                         <app-reaction [post]="post" ></app-reaction>
-                         <app-comment [post]="post" ></app-comment>
+                        <app-comments [post]="post" ></app-comments>
                         </div>
                 </div>
               </div>
